# judge-of-character

./: .dockerignore  .env  .env.example  .gitignore  makefile  nuxt.config.js  package-lock.json  package.json  tailwind.config.js  vetur.config.js
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.github/workflows/: build.yaml  deploy.yml  main.yml
assets/css/: tailwind.css
assets/js/: state.ts  utils.ts
backend/: .eslintrc.js  .gitignore  build.js  config.ts  index.ts  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json
backend/api/: schema.json  serializers.py  urls.py  viewsets.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  models.py
backend/core/migrations/: 0001_initial.py  0002_leader.py
backend/scripts/: createTable.ts
components/: TextWrangle.vue  UserStats.vue
devops/: Dockerfile
devops/dev/: docker-compose.yaml  entrypoint.sh
frontend/: README.md  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
frontend/assets/.codegen/: api.ts  configuration.ts
frontend/assets/js/: api.ts  constants.ts  state.ts  utils.ts
frontend/components/: Leaderboard.vue  Profile.vue  UserStats.vue
frontend/layouts/: default.vue
frontend/middleware/: authentication.ts
frontend/pages/: Fail.vue  fail.vue  index.vue
joc-infra/: .eslintrc.js  cdk.json  package-lock.json  package.json
joc-infra/lib/: joc-infra-stack.ts
joc-infra/test/: joc-infra.test.ts
layouts/: default.vue
pages/: index.vue
static/: browserconfig.xml
(+8 files in other folders)
